Сделал хедер, кликабельный

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
-    
+
+    <header id="header">
+        <div id="logo" class="round roundimg"></div>
+        <nav>
+            <a href="#">Обо мне</a>
+            <a href="#">Мои услуги</a>
+            <a href="#">Мои проекты</a>
+            <a href="#">Связь со мной</a>
+        </nav>
+        <div id="socContr">
+            <a href="tel:+79212694670">Позвонить сейчас</a>
+            <div id="conteinerForSoc">
+                <a href="#"><div id="vk" class="round roundimg"></div></a>
+                <a href="#"><div id="tg" class="round roundimg"></div></a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
